kubernetes/grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.3.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: config
              mountPath: /etc/grafana/provisioning/datasources/grafana-datasource.yaml
              subPath: grafana-datasource.yaml
            - name: config
              mountPath: /etc/grafana/provisioning/dashboards/grafana-dashdoards-prov.yaml
              subPath: grafana-dashdoards-prov.yaml
            - name: config
              mountPath: /etc/grafana/provisioning/dashboards/grafana-ispmonitor-dashboard.json
              subPath: grafana-ispmonitor-dashboard.json
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage-claim
        - name: config
          configMap:
            name: ispmonitor-config

---

apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
