kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ispmonitor-ingress
spec:
  rules:
    - host: grafana.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: prometheus.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: telegraf.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ispmonitor
                port:
                  number: 9283
